Fixed a couple bugs with dealing with ranges, and layout issues.

--- a/public/css/rule_edit.css
+++ b/public/css/rule_edit.css
@@ -1,8 +1,5 @@
 .sidebar-container {
-    flex-grow: 2;
     padding: 10px;
-    min-width: 150px;
-    max-width: 500px;
 }
 
 .panel {
@@ -34,7 +31,13 @@
 }
 
 .rule-drawing {
-    flex-grow: 3;
+    flex-grow: 10;
+    flex-basis: 0;
+}
+
+.sidebar-supercontainer {
+    flex-grow: 4;
+    flex-basis: 0;
 }
 
 
